# GPSProcessor

./: CMakeLists.txt  README.md  input.json  output-metric.json  output.json  run.sh
include/: IUnitConverter.h  ImperialConverter.h  MetricConverter.h
src/: ImperialConverter.cpp  MetricConverter.cpp  README.md  main.cpp
